--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,31 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+html,
+body,
+#root,
+.app,
+.content {
+  height: 100%;
+  width: 100%;
+}
+
+.app {
+  display: flex;
+  position: relative;
+}
+
+.main {
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+a {
+  text-decoration: none;
 }
